Excess apps overflowing when resized fixed

--- a/style.css
+++ b/style.css
@@ -2,9 +2,11 @@
     - Refactors
     - Settings
     - Improve nav button design
-    - Create a function that returns
-      the maximum number of apps per
-      page.
+    - Fix nav btn error when resizing
+    - When resizing, get first app, then
+      scroll to that app's section if not
+      there.
+    - snap the scroll when being dragged (touch devices)
 */
 :root {
     --soft-black: #1B1C1E;
@@ -17,7 +19,8 @@ html, body {
         Helvetica Neue,sans-serif;
     padding: 0;
     margin: 0;
-    /* overflow: hidden; */
+    height: 100%;
+    overflow: hidden;
 }
 
 .tablet {
@@ -76,8 +79,9 @@ html, body {
     width: 100%;
     height: 100%;
     padding: 0 5%;
-    box-sizing: border-box;
     margin-top: 2.5em;
+    box-sizing: border-box;
+    overflow-y: hidden;
 }
 
 .app-section .app {
@@ -142,6 +146,7 @@ div.nav button.nav {
     margin: 0 5px;
     border: none;
     border-radius: 50%;
+    cursor: pointer;
     transition: transform 0.1s;
 }
 
